--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/react-native": "^5.1.3",
     "expo": "~51.0.23",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.4",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "typescript": "^5.1.3"
   },
   "private": true
